--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ img{vertical-align: top;}
 .main_screen {
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: relative;
 	padding: 50px 0;
 }
 .main_screen_bg {
